prost-unwrap-proto-tests/tests/ui/with_enum_duplicate.stderr
error: Duplicate specs are not allowed
  --> tests/ui/with_enum_duplicate.rs:12:16
   |
12 |     .with_enum(B)
   |                ^
